--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
                 <div class="uk-navbar-left">
                     <a class="uk-navbar-item uk-logo uk-visible@m" href="/docs/welcome/">{% if site.logo %}<img src="{{ site.uploads | absolute_url }}{{ site.logo }}" alt="{{ site.title | escape }}">{% else %}{{ site.title | escape }}{% endif %}</a>
                     {% if site.data.translation[site.lang].mobile_nav_docs %}
-                        <a class="uk-navbar-toggle uk-hidden@m" href="#offcanvas-docs" data-uk-toggle><span data-uk-navbar-toggle-icon></span> <span class="uk-margin-small-left">{{ site.data.translation[site.lang].mobile_nav_docs }}</span></a>
+                        <a class="uk-navbar-toggle uk-hidden@m" href="#offcanvas-docs" data-uk-toggle><span data-uk-navbar-toggle-icon></span></a>
                     {% else %}
                         <a class="uk-navbar-toggle uk-hidden@m" href="#offcanvas-docs" data-uk-navbar-toggle-icon data-uk-toggle></a>
                     {% endif %}
@@ -68,7 +68,9 @@
                         {% unless page.hero%}
                             <div>
                                 <a id="search-navbar-toggle" class="uk-navbar-toggle" uk-search-icon href="#"></a>
-                                <div class="uk-drop uk-background-default uk-border-rounded" uk-drop="mode: click; pos: left-center; offset: 0">
+                                <div style="
+                                left: 0 !important;
+                                max-width: calc(100% - 50px) !important;" class="uk-drop uk-background-default uk-border-rounded" uk-drop="mode: click; pos: left-center; offset: 0">
                                     <form class="uk-search uk-search-navbar uk-width-1-1" onsubmit="return false;">
                                         <input id="search-navbar" class="uk-search-input" type="search" placeholder="{{ site.data.translation[site.lang].search_placeholder | default: "Search for answers" }}" autofocus autocomplete="off">
                                     </form>
@@ -137,12 +139,6 @@
                             {% endif %}
                         {% endfor %}
                     </ul>
-
-                    {% if site.data.translation[site.lang].mobile_nav_site %}
-                        <a class="uk-navbar-toggle uk-hidden@m" href="#offcanvas" data-uk-toggle><span data-uk-navbar-toggle-icon></span> <span class="uk-margin-small-left">{{ site.data.translation[site.lang].mobile_nav_site }}</span></a>
-                    {% else %}
-                        <a class="uk-navbar-toggle uk-hidden@m" href="#offcanvas" data-uk-navbar-toggle-icon data-uk-toggle></a>
-                    {% endif %}
 
                 </div>
             </div>
